--- a/views/cal.pug
+++ b/views/cal.pug
@@ -10,6 +10,8 @@ html
     form
       input#name(placeholder="Your name", required)
       button Send!
+    input#results(type="checkbox", style="display:none")
+    label#show(for="results" title="Hover mouse on bars for more info") Show results
     p#help
       a(href="#fn") &#x2754; Help &#x2754;
     #cal
